--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,14 +1,24 @@
 .infoCardContainer {
-    background-color: rosybrown;
+    max-width: 1260px;
+    margin: 0;
+    padding: 0;
+}
+
+.infoCardContainer--vintage {
+    background-color: #EDCFD1;
+}
+
+.infoCardContainer--metal {
+    background-color: #e1e1e1;
 }
 
 .infoCardHeadline {
     font-family: serif;
     font-size: 2.25rem;
-    font-weight: normal;
-    color: rgb(143, 139, 139);
+    font-weight: bold;
+    color: black;
+    border: 2px solid black;
     padding: 24px;
-    color: white;
 }
 
 .infoCardCallActionContainer :global(.vtex-button) {
@@ -17,13 +27,8 @@
     border: transparent;
 }
 
-.infoCardSubhead {
-    color: white;
-    border: transparent;
-}
-
 .infoCardCallActionContainer :global(.vtex-button):hover {
-    color: gray;
+    color: white;
     background-color: blue;
     border: transparent;
 }
