--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -28,7 +28,7 @@
 }
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
-    color: white;
-    background-color: blue;
+    color: gray;
+    background-color: white;
     border: transparent;
 }
